<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_main_frg_background"
    android:orientation="vertical">

    <com.xiezhiai.wechatplugin.widget.CommonTopBar
        android:id="@+id/common_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_button_visible="false"
        app:right_button_visible="false"
        app:title="@string/tab_group_helper" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/shape_white_corner_background"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_tab"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:checkedButton="@id/rb_group_send_msg"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_group_send_msg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_group_helper_left_tab_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/group_send_msg"
                android:textColor="@drawable/selector_text_color_group_helper_tab"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rb_group_reply_setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_group_helper_right_tab_background"
                android:button="@null"
                android:gravity="center"
                android:text="@string/group_reply_setting"
                android:textColor="@drawable/selector_text_color_group_helper_tab"
                android:textSize="15sp" />

        </RadioGroup>

        <com.xiezhiai.wechatplugin.widget.NoScrollViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


</LinearLayout>