<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_main_frg_background"
    android:orientation="vertical">

    <com.xiezhiai.wechatplugin.widget.CommonTopBar
        android:id="@+id/common_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_button_visible="false"
        app:right_button_visible="false"
        app:title="@string/tab_qalib" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/shape_white_corner_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/btn_common_qa"
            android:layout_width="310dp"
            android:layout_height="144dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/selector_commonqa_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@mipmap/icon_comon_qa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="常用问答"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_common_qa_count"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@drawable/shape_qalib_count_lable_bg"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="已有 58 条"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/common_qa_desc"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_sns"
            android:layout_width="310dp"
            android:layout_height="144dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/selector_sns_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@mipmap/icon_sns" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="朋友圈问答"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_wechat_sns_count"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@drawable/shape_qalib_count_lable_bg"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="已有 58 条"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/sns_desc"
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>